--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p>I'm</p>
                         <h1>Adarsh Uchibagle</h1>
                         <h2></h2>
-                        <div class="typed-text">Web Designer, Web Developer, Front End Developer</div>
+                        <div class="typed-text">Full Stack Developer</div>
                     </div>
                 </div>
                 <!-- Header End -->
